# progra_tarea02

./: .gitignore  CMakeLists.txt  README.md
include/core_numeric/: algorithms.h  concepts.h  core_numeric.h  custom_types.h  variadic.h
tests/: test_max.cpp  test_mean.cpp  test_sum.cpp  test_transform_reduce.cpp  test_variadic.cpp  test_variance.cpp
